# rspc-tauri2

./: Cargo.toml
rspc_example/src-tauri/: Cargo.toml
rspc_tauri2/: Cargo.toml
rspc_tauri2/src/: lib.rs
rspc_tauri_specta_example/src-tauri/: Cargo.toml
