[package]
name = "rspc_example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
tauri = { version = "2.0.2" }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "c57fa59a4369a4e64a5322dd7eb0cf3992b57ab1" }
rspc-tauri2 = { path = "../../rspc_tauri2" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
specta = { version = "2.0.0-rc.11" }
